--- a/MyCalendar.MVC/Views/Home/_Status.cshtml
+++ b/MyCalendar.MVC/Views/Home/_Status.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyCalendar.Website.ViewModels.CalendarVM
+﻿@model MyCalendar.Website.ViewModels.BaseVM
 @using MyCalendar.Enums
 
 @if (Model.UpdateStatus.UpdateResponse != null)
