--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿@model MyCalendar.Website.ViewModels.BaseVM
+﻿@using MyCalendar.Website.ViewModels
+@{
+    var Model = ViewData[nameof(BaseVM)] as BaseVM;
+}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -65,11 +69,16 @@
                                 <span class="glyphicon glyphicon-log-out"></span> Logout
                             </a>
                         </li>
+                        <li>
+                            <a href="@Model.CronofyCalendarAuthUrl">
+                                <img src="https://i.pinimg.com/originals/1c/18/61/1c1861046d8f837de76fa78fcad98b7a.png" width="20" height="20" />
+                            </a>
+                        </li>
                     }
                     else
                     {
                         <li>
-                            <a href="@Url.Action("Index", "Home")">
+                            <a href="@Url.Action("Login", "Home")">
                                 <span class="glyphicon glyphicon-log-in"></span> Login
                             </a>
                         </li>
@@ -84,7 +93,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <small>&copy; @DateTime.Now.Year - iCalendar App® <span class="pull-right">v1.1.9</span></small>
+            <small>&copy; @DateTime.Now.Year - iCalendar App® <a href="/home/changelog" class="pull-right">v1.2.0</a></small>
         </footer>
     </div>
 
