Make cronofy work with scheduler, add cronify authentication  and account linking option in settings, set default calendar

--- a/MyCalendar.MVC/Content/Site.css
+++ b/MyCalendar.MVC/Content/Site.css
@@ -149,3 +149,7 @@ textarea {
 }
 
 
+
+.modal-content {
+    background-image: url('https://newevolutiondesigns.com/images/freebies/white-wallpaper-18.jpg');
+}
